--- a/.gitignore
+++ b/.gitignore
@@ -699,20 +699,6 @@ MigrationBackup/
 
 .idea/
 
-#amplify
-amplify
-amplify/\#current-cloud-backend
-amplify/.config/local-*
-amplify/logs
-amplify/mock-data
-amplify/backend/amplify-meta.json
-amplify/backend/awscloudformation
-amplify/backend/.temp
-build/
-dist/
-node_modules/
-aws-exports.js
-
 awsconfiguration.json
 amplifyconfiguration.json
 amplify-build-config.json
@@ -722,3 +708,24 @@ amplifytools.xcconfig
 
 .vscode
 yarn.lock
+amplify/*
+#amplify-do-not-edit-begin
+amplify/\#current-cloud-backend
+amplify/.config/local-*
+amplify/logs
+amplify/mock-data
+amplify/backend/amplify-meta.json
+amplify/backend/.temp
+build/
+dist/
+node_modules/
+aws-exports.js
+awsconfiguration.json
+amplifyconfiguration.json
+amplifyconfiguration.dart
+amplify-build-config.json
+amplify-gradle-config.json
+amplifytools.xcconfig
+.secret-*
+**.sample
+#amplify-do-not-edit-end
